--- a/index.css
+++ b/index.css
@@ -32,8 +32,8 @@ h1 {
     height: 500px;
     margin: 12.5% auto;
     display: grid;
-    grid-template-rows: auto auto auto;
-    grid-template-columns: auto auto auto;
+    grid-template-rows: calc(500px / 3) calc(500px / 3) calc(500px / 3);
+    grid-template-columns: calc(500px / 3) calc(500px / 3) calc(500px / 3);
 }
 
 .square {
@@ -41,4 +41,14 @@ h1 {
     border: 1px;
     border-color: var(--accent-color);
     border-style: solid;
+    color: var(--accent-color);
+    font-size: 50px;
+    width: 100%;
+    height: 100%;
+}
+
+.square > h1 {
+    position: relative;
+    top: calc(50% - 50px);
+    cursor: pointer;
 }
