--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
     --accent-color: #fca311;
     --board-color: #14213d;
     --text-color: #e5e5e5;
+    --board-dimension: 500px
 }
 
 :root, body, html {
@@ -20,6 +21,8 @@ h1, h2, h3, h4, h5, p {
 .header {
     background-color:var(--accent-color);
     padding: 1rem 0;
+    font-size: 25px;
+    min-width: 100%;
 }
 
 h1 {
@@ -28,12 +31,12 @@ h1 {
 
 .game-board {
     background-color: var(--board-color);
-    width: 500px;
-    height: 500px;
-    margin: 12.5% auto;
+    width: var(--board-dimension);
+    height: var(--board-dimension);
+    margin: 5% auto;
     display: grid;
-    grid-template-rows: calc(500px / 3) calc(500px / 3) calc(500px / 3);
-    grid-template-columns: calc(500px / 3) calc(500px / 3) calc(500px / 3);
+    grid-template-rows: calc(var(--board-dimension) / 3) calc(var(--board-dimension) / 3) calc(var(--board-dimension) / 3);
+    grid-template-columns: calc(var(--board-dimension) / 3) calc(var(--board-dimension) / 3) calc(var(--board-dimension) / 3);
 }
 
 .square {
@@ -42,13 +45,15 @@ h1 {
     border-color: var(--accent-color);
     border-style: solid;
     color: var(--accent-color);
-    font-size: 50px;
+    font-size: 60px;
     width: 100%;
     height: 100%;
+    cursor: pointer;
 }
 
 .square > h1 {
     position: relative;
-    top: calc(50% - 50px);
-    cursor: pointer;
+    top: calc(9%);
+    min-width: 100%;
+    min-height: 100%;
 }
