--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
     --accent-color: #fca311;
     --board-color: #14213d;
     --text-color: #e5e5e5;
-    --board-dimension: 500px
+    --board-dimension: 45vw;
 }
 
 :root, body, html {
@@ -41,11 +41,11 @@ h1 {
 
 .square {
     background-color: var(--board-color);
-    border: 1px;
+    border: 2px;
     border-color: var(--accent-color);
     border-style: solid;
     color: var(--accent-color);
-    font-size: 60px;
+    font-size: calc(var(--board-dimension) / 6);
     width: 100%;
     height: 100%;
     cursor: pointer;
@@ -53,7 +53,7 @@ h1 {
 
 .square > h1 {
     position: relative;
-    top: calc(9%);
+    top: calc(-8%);
     min-width: 100%;
     min-height: 100%;
 }
